@@ -422,6 +422,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #9993: When the source and destination are on different filesystems,
+  and the source is a symlink, shutil.move() now recreates a symlink on the
+  destination instead of copying the file contents.  Patch by Jonathan Niehof
+  and Hynek Schlawack.
+
 - Issue #12926: Fix a bug in tarfile's link extraction.
 
 - Issue #13696: Fix the 302 Relative URL Redirection problem.
